--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     <p>
       Hello! I am a Ph.D. student in the <a href="https://www.ic.gatech.edu/">School of Interactive Computing</a> at <a href="https://www.gatech.edu">Georgia Tech</a> advised by <a href="http://aritter.github.io">Alan Ritter</a>.
       I formerly worked as an applied scientist at <a href="https://clova.ai/en">Naver Clova</a>, where I played a pivotal role in developing a foundational vision-language model: <a href="https://clova.ai/en/tech-blog/en-introducing-hyperclova-x-vision">Hyperclova-X-Vision</a>.
-      Pror to Naver, I received B.E. in Statistics, B.S, and M.E. in Computer Science & Engineering from <a href="https://www.korea.edu/mbshome/mbs/en/index.do">Korea University</a>.
+      Prior to Naver, I received B.E. in Statistics, B.S, and M.E. in Computer Science & Engineering from <a href="https://www.korea.edu/mbshome/mbs/en/index.do">Korea University</a>.
     </p>
     <p>
       My research pursuits aim to create a comprehensive multimodal system capable of perceiving, comprehending, and reasoning. 
