--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ layout: default
 
         <div class="paper">
           <p class="title">
-            <b>Naver Clova <b style="float:right;">Seongnam, Republic of Korea</b></b>
+            <b>Naver Clova <b style="float:right;">Seongnam, Korea</b></b>
           </p>
           <p>Applied Scientist <b style="float:right;">Jul. 2021 - Aug. 2024</b></p>
           <p>Research Intern <b style="float:right;">July. 2020 - Dec. 2020</b></p>
@@ -92,7 +92,7 @@ layout: default
 
         <div class="paper">
           <p class="title">
-            <b>Korea University <b style="float:right;">Seoul, Republic of Korea</b></b>
+            <b>Korea University <b style="float:right;">Seoul, Korea</b></b>
           </p>
           <p>Graduate Research Assistant (M.E.) <b style="float:right;">Mar. 2019 - Aug. 2021</b></p>
           <p>Advisor: Jaewoo Kang </p>
