--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ layout: default
   <p>
     <p>
       Hello! I am a Ph.D. student in the <a href="https://www.ic.gatech.edu/">School of Interactive Computing</a> at <a href="https://www.gatech.edu">Georgia Tech</a> advised by <a href="http://aritter.github.io">Alan Ritter</a>.
-      I formerly worked as an applied scientist at <a href="https://clova.ai/en">Naver Clova</a>, where I played a pivotal role in developing a foundational vision-language model: <a href="https://clova.ai/en/tech-blog/en-introducing-hyperclova-x-vision">Hyperclova-X-Vision</a>.
+      I formerly worked as an applied scientist at <a href="https://clova.ai/en">Naver Clova</a>, where I actively shaped the development of a foundational vision-language model: <a href="https://clova.ai/en/tech-blog/en-introducing-hyperclova-x-vision">Hyperclova-X-Vision</a>.
       Prior to Naver, I received B.E. in Statistics, B.S, and M.E. in Computer Science & Engineering from <a href="https://www.korea.edu/mbshome/mbs/en/index.do">Korea University</a>.
     </p>
     <p>
@@ -22,6 +22,10 @@ layout: default
 <div class="docs-section" id="news">
   <h4>News</h4>
     <ul>
+      <li>
+        <b style="color: #46923c; font-weight: normal;">[May. 2025]</b>&nbsp&nbsp
+        Our new paper, <a href="https://arxiv.org/html/2502.18791v2">"Can LLMs Help Uncover Insights about LLMs? A Large-Scale, Evolving Literature Analysis of Frontier LLMs"</a> has been accepted to <i>ACL 2025 Main</i>.
+      </li>
       <li>
         <b style="color: #46923c; font-weight: normal;">[Aug. 2024]</b>&nbsp&nbsp
         Embarked on my Ph.D. journey at Georgia Tech.
