--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ layout: default
       Prior to Naver, I received B.E. in Statistics, B.S, and M.E. in Computer Science & Engineering from <a href="https://www.korea.edu/mbshome/mbs/en/index.do">Korea University</a>.
     </p>
     <p>
-      My research pursuits aim to create a comprehensive multimodal system capable of perceiving, comprehending, and reasoning. 
-      To achieve this goal, my research interests include aligning language and vision modalities and enhancing model comprehension of complex structural visual information.
-      Building on this development, I am interested in applying such a multimodal system to expedite scientific discoveries.
+      My research pursuits aim to build a comprehensive multimodal system that can perceive, comprehend, and reason. 
+      To achieve this goal, my research interests include post-training reinforcement learning to encourage diverse, calibrated reasoning paths. 
+      Building on this development, I am interested in applying such a multimodal system to expedite scientific discoveries by building agentic workflows that compile and retrieve evidence, run guarded analyses, and produce citable, reproducible findings.
     </p>
   </p>
 </div>
